Bug 254767 - blank screen when "Lock screen on resume"
Summary: blank screen when "Lock screen on resume"
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-20 15:31 UTC by Oliver Henshaw
Modified: 2010-11-10 01:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Henshaw 2010-10-20 15:31:38 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

With "Lock screen on resume" the system resumes from suspend with a blanked screen - I have to move the mouse to see the unlock dialog. This is undesirable because (1) it looks like the resume has failed, (2) the system should be visibly restored as soon as it is fully resumed.

Reproducible: Always

Steps to Reproduce:
Resume from suspend

Actual Results:  
Blank screen (as screensaver)

Expected Results:  
Screensaver unlock dialog
Comment 1 Oswald Buddenhagen 2010-10-23 14:47:29 UTC
now that i implemented bug 207348, this should be fairly easy to do on the powerdevil side. provided the locker is already running when we wake up ...
Comment 2 Oliver Henshaw 2010-10-23 15:48:23 UTC
I think powerdevil already calls SimulateUserActivity on the resume path (to avoid idling again I think).

FWIW I think that this is how the gnome screensaver/power-manager already behave (but I think in their case SimulateUserActivity does fake an x event so they may get this as a side effect)
Comment 3 Dario Freddi 2010-11-10 01:05:15 UTC
SVN commit 1194834 by dafre:

BUG: 254767

Perform screen lock properly, and notify the screensaver upon resume to show the password dialog instantly

 M  +22 -0     actions/bundled/suspendsession.cpp  
 M  +5 -5      powerdevilcore.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194834