BUG: 254767

Perform screen lock properly, and notify the screensaver upon resume to show the password dialog instantly

svn path=/trunk/KDE/kdebase/workspace/; revision=1194834